--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,24 +53,24 @@ commands:
 parameters:
   circleci_image:
     type: string
-    default: circleci/node:latest
+    default: ruby:2.4.1
   py_alp_image:
     type: string
     default: python:3.7-alpine3.11
             
 jobs:
-  build-frontend:
-    docker:
-      - image: ruby:2.4.1
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-build]
-      - run:
-          name: install dependencies for front-end
-          command: |
-            ls -l
-            pwd
+  # build:
+  #   docker:
+  #     - image: << pipeline.parameters.circleci_image >>
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [build]
+  #     - run:
+  #         name: install dependencies for front-end
+  #         command: |
+  #           ls -l
+  #           pwd
       # - run:
       #     name: Build front-end
       #     command: |
@@ -80,26 +80,32 @@ jobs:
       #     paths: [frontend/node_modules]
       #     key: frontend-build
 
-  test-frontend:
+  build:
     docker:
-      - image: circleci/node:13.8.0
+      - image: << pipeline.parameters.circleci_image >>
     steps:
       - checkout
-      - restore_cache:
-          keys: [frontend-build]
       - run:
-          name: Installl front-end dependencies
+          name: Installl dependencies
           command: |
-            cd frontend
-            npm install
+            curl -sL https://deb.nodesource.com/setup_10.x | bash -
+            curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
+            && echo 'deb http://dl.yarnpkg.com/debian/ stable main' > /etc/apt/sources.list.d/yarn.list
+            apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get -yq dist-upgrade && \
+            DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends \
+            build-essential \
+            nodejs \
+            yarn && \
+            apt-get clean && \
+            rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
+            truncate -s 0 /var/log/*log
       - run:
-          name: Test front-end
+          name: Bundle and Yarn Installation 
           command: |
-            cd frontend
-            npm run test
+            bundle install && yarn install
       - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-build
+          paths: [node_modules]
+          key: build
 
   analyze-frontend:
     docker:
@@ -335,7 +341,7 @@ jobs:
 workflows:
   frontend:
     jobs:
-      - build-frontend
+      - build
   #         filters:
   #           branches:
   #             ignore: master
