--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,32 +121,29 @@ jobs:
             ruby -c config/application.rb
             roodi config/application.rb
             echo "There is no syntax error, Great!"
-      # - run
-      #     name: Analyze front-end
-      #     command: |
-      #       cd frontend
-      #       npm audit fix --audit-level=critical --force
   docker-build:
     machine: true
     steps:
       - checkout
       # start proprietary DB using private Docker image
       # with credentials stored in the UI
-      # - run: |
-      #     echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
-      #     docker run -d --name db company/proprietary-db:1.2.3
-
+      - run: |
+          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+          # docker run -d --name db company/proprietary-db:1.2.3
       # build the application image
-      - run: docker build -t company/app:$CIRCLE_BRANCH .
-  build-backend:
+      - run: docker build -t muhammadyasser/ruby-udacity:latest .
+      - run: docker images
+      - run: docker push muhammadyasser/ruby-udacity:latest
+
+  migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: muhammadyasser/timestack-builder
     steps:
       - checkout
       - run:
           name: Back-end install dependencies
           command: |
-             cd backend
+             ls -l
              npm install
       - run:
           name: Back-end build
@@ -352,9 +349,9 @@ jobs:
       - revert-migrations
       - destroy-infra
 
-workflows:
-  build:
-    jobs:
+# workflows:
+#   build:
+#     jobs:
       # - build
       #     filters:
       #       branches:
@@ -364,7 +361,7 @@ workflows:
       #     filters:
       #       branches:
       #         ignore: master
-      - docker-build
+      # - docker-build
           # requires: [build-frontend]
           # filters:
           #   branches:
