--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,10 @@
 defaults: &defaults
   adapter: mysql2
   encoding: utf8
-  username: <%= ENV['USERNAME'] %> 
-  password: <%= ENV['PASSWORD'] %> 
+  username: <%= ENV['DATABASE_USER'] %> 
+  password: <%= ENV['DATABASE_PASS'] %> 
   pool: 5
-  host: mysql
+  host: udacity.coa3nv0zxmy6.us-west-2.rds.amazonaws.com
 
 ### ALTER USER 'yasser'@'%' IDENTIFIED WITH mysql_native_password BY 'rsi1111'; 
 test: &test
@@ -13,7 +13,7 @@ test: &test
 
 development:
   <<: *defaults
-  database: <%= ENV['DATABASE'] %> 
+  database: <%= ENV['DATABASE_NAME'] %> 
 
 cucumber:
   <<: *test
