--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,6 +146,7 @@ jobs:
              cp -r /app/node_modules .
              chmod -R +x .
              bundle install
+             echo $DATABASE_USER
              bin/rails db:migrate RAILS_ENV=development
              bin/rails db:seed
              
