--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ jobs:
           paths: [node_modules]
           key: build
 
-  test:
+  lint:
     docker:
       - image: << pipeline.parameters.circleci_image >>
     steps:
@@ -115,7 +115,7 @@ jobs:
       - restore_cache:
           keys: [build]
       - run:
-          name: Check for syntax errors
+          name: Check for syntax errors - "linting"
           command: |
             gem install roodi
             ruby -c config/application.rb
@@ -144,7 +144,7 @@ jobs:
           name: Run migrations
           command: |
              cp -r /app/node_modules .
-             chmod -R +x .
+             chmod -R +x bin
              bundle install
              echo $DATABASE_USER
              bin/rake db:rollback STEP=1
@@ -156,22 +156,27 @@ jobs:
       #     command: |
       #        bin/rails db:seed
 
-  test-backend:
+  test-circleci:
     docker:
-      - image: circleci/node:13.8.0
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - run:
-          name: Back-end install dependencies
+          name: install aws cli
           command: |
-             cd backend
-             npm install
+            apk add --no-cache curl
+            apk add --no-cache --upgrade bash
+            apk add --no-cache --update ansible
+            apk add --no-cache openssh-client
+            pip3 install awscli
       - run:
-          name: Back-end test
+          name: aws provisioning
           command: |
-             cd backend
-             npm run test
-             
+              AWS_VALIDATION=$(aws cloudformation list-exports --query "Exports[?Name=='ENV'].Value" --output text)
+              if [[ "${AWS_VALIDATION}" != "demo" ]] 
+              then 
+              aws cloudformation deploy --template-file .circleci/files/backend.yml --stack-name demo --parameter-overrides EnvironmentName=demo
+              fi
   analyze-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -367,9 +372,10 @@ workflows:
           # filters:
           #   branches:
           #     ignore: master
-      - migrations
+      # - migrations
           # requires:
           #   - "docker-build"
+      - test-circleci
 
   # backend:
   #   jobs:
