--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ jobs:
               AWS_VALIDATION=$(aws cloudformation list-exports --query "Exports[?Name=='ENV'].Value" --output text)
               if [[ "${AWS_VALIDATION}" != "demo" ]] 
               then 
-              aws cloudformation deploy --template-file .circleci/files/backend.yml --stack-name demo --parameter-overrides EnvironmentName=demo
+              aws cloudformation deploy --template-file .circleci/files/backend.yml --stack-name demo --region us-west-2 --parameter-overrides EnvironmentName=demo
               fi
   analyze-backend:
     docker:
