--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,28 +177,28 @@ jobs:
 workflows:
   build:
     jobs:
-      # - build
+      - build
       # #     filters:
       # #       branches:
       # #         ignore: master
-      # - lint:
-      #     requires: [build]
+      - lint:
+          requires: [build]
       # #     filters:
       # #       branches:
       # #         ignore: master
-      # - docker-build:
-      #     requires: [lint]
+      - docker-build:
+          requires: [lint]
       #     # filters:
       #     #   branches:
       #     #     ignore: master
-      # - migration:
-      #     requires:
-      #       - "docker-build"
-      # - deploy-k8s-cluster:
-      #     requires:
-      #       - "docker-build"
-      - app-deployment
-      #     requires:
-      #       - "deploy-k8s-cluster"
+      - migration:
+          requires:
+            - "docker-build"
+      - deploy-k8s-cluster:
+          requires:
+            - "docker-build"
+      - app-deployment:
+          requires:
+            - "deploy-k8s-cluster"
 
 
